--- a/game.html
+++ b/game.html
@@ -8,7 +8,11 @@
 <body>
     <div class="game-container">
         <canvas id="gameCanvas" width="1200" height="300"></canvas>
-        <button id="restartButton">Recomeçar</button>
+        <div class="buttons-container">
+            <a href="historico.html" class="button">Ver Histórico</a>
+            <a href="index.html" class="button">Voltar ao Início</a>
+            <a href="select.html" class="button">Selecionar Personagem</a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
