--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body class="index-background">
     <div class="index-container">
         <a href="select.html" class="button">Jogar</a>
+        <a href="historico.html" class="button" style="margin-top:16px;">Ver Histórico</a>
     </div>
 </body>
 </html>
