--- a/game.html
+++ b/game.html
@@ -8,11 +8,11 @@
 <body>
     <div class="game-container">
         <canvas id="gameCanvas" width="1200" height="300"></canvas>
-        <div class="buttons-container">
-            <a href="historico.html" class="button">Ver Histórico</a>
-            <a href="index.html" class="button">Voltar ao Início</a>
-            <a href="select.html" class="button">Selecionar Personagem</a>
-        </div>
+    </div>
+    <div class="buttons-container" style="width:1200px; margin:24px auto 0 auto; text-align:center; display:flex; flex-direction:row; justify-content:center; gap:24px;">
+        <a href="historico.html" class="button">Ver Histórico</a>
+        <a href="index.html" class="button">Voltar ao Início</a>
+        <a href="select.html" class="button">Selecionar Personagem</a>
     </div>
     <script src="script.js"></script>
 </body>
