mudei até o dna

--- a/game.html
+++ b/game.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>Jurassic Jump</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .final-score {
+            font-family: 'Press Start 2P', cursive;
+            font-size: 24px;
+            text-align: center;
+            margin-top: 20px;
+            color: #bfbfbf;
+        }
+    </style>
 </head>
 <body>
     <div class="game-container">
